kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: shippingchallenge-lighttpd
    namespace: default
spec:
    replicas: 3
    selector:
        matchLabels:
            app: lighttpd
    template:
        metadata:
            labels:
                app: lighttpd
        spec:
            containers:
                - name: lighttpd
                  image: tritsmansdylan/shippingchallenge
                  ports:
                    - containerPort: 80
                      name: lighttpd
