kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shippingchallenge-service
  labels:
    app: lighttpd
spec:
  type: ClusterIP
  ports:
    - port: 80
  selector:
    app: lighttpd
